--- a/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
@@ -76,7 +76,7 @@
     </div>
     <div class="container-fluid marketplace-container" *ngIf="adapterLoadingError" fxFlex="100"
          fxLayoutAlign="center center" fxLayout="row">
-        <h4>Available adapters could not be loaded. Did you start a StreamPipes Connect worker node?</h4>
+        <h4>Available adapters could not be loaded. Did you start a Connect worker node?</h4>
     </div>
     <div class="container-fluid marketplace-container" *ngIf="adaptersLoading" fxFlex="100"
          fxLayoutAlign="center center" fxLayout="row">
