--- a/ui/src/app/core/components/feedback/feedback.component.html
+++ b/ui/src/app/core/components/feedback/feedback.component.html
@@ -23,7 +23,7 @@
         </div>
         <div fxLayout="column" fxFlex="40" fxLayoutAlign="start center" style="margin-bottom:20px;">
             <div fxFlex="100" class="feedback-explainer">
-                <span>Your feedback helps us to improve StreamPipes.<br/></span>
+                <span>Your feedback helps us to improve {{appConstants.APP_NAME}}.<br/></span>
                 <span>Features you'd like to see, bugs you've found or things you like - tell us what you think!</span>
             </div>
         </div>
