--- a/ui/src/app/login/components/setup/setup.component.html
+++ b/ui/src/app/login/components/setup/setup.component.html
@@ -22,7 +22,7 @@
             <form #setupForm="ngForm" fxFlex="100" fxLayout="column">
                 <div class="setup-header p-20">
                     <img class="sp-logo" alt="icon" src="../../../../assets/img/login/logo.png">
-                    <h2 class="text-center">Welcome to Apache StreamPipes!</h2>
+                    <h2 class="text-center">Welcome to {{appConstants.APP_NAME}}!</h2>
                     <span class="text-center">Create a user and you are ready to go (the initial setup might take some time)</span>
                 </div>
                 <div fxFlex="100" fxLayout="column" *ngIf="!installationRunning" >
