--- a/ui/src/app/login/components/startup/startup.component.html
+++ b/ui/src/app/login/components/startup/startup.component.html
@@ -25,8 +25,8 @@
             <h2>Welcome!</h2>
         </div>
         <div fxFlex="100">
-            <h4 style="text-align:center;">Please wait while StreamPipes is starting up.</h4>
-            <h5 style="text-align:center;"><i>On some systems, initial startup might take a few minutes. We'll automatically forward you once StreamPipes is ready.</i></h5>
+            <h4 style="text-align:center;">Please wait while {{appConstants.APP_NAME}} is starting up.</h4>
+            <h5 style="text-align:center;"><i>On some systems, initial startup might take a few minutes. We'll automatically forward you once {{appConstants.APP_NAME}} is ready.</i></h5>
         </div>
 
         <div fxFlex="100" fxLayoutAlign="center center">
