--- a/ui/src/app/profile/components/token/token-management-settings.component.html
+++ b/ui/src/app/profile/components/token/token-management-settings.component.html
@@ -22,7 +22,7 @@
             <div fxFlex="300px" fxLayout="column" class="profile-section">
                 <div class="settings-title">API Keys</div>
                 <div class="settings-description">Manage your API keys for third-party application access to
-                    StreamPipes.
+                    {{appConstants.APP_NAME}}.
                 </div>
             </div>
             <div fxFill fxLayout="column">
