--- a/ui/src/app/editor/dialog/welcome-tour/welcome-tour.component.html
+++ b/ui/src/app/editor/dialog/welcome-tour/welcome-tour.component.html
@@ -20,15 +20,15 @@
     <div class="sp-dialog-content p-15" fxLayout="column">
         <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column">
             <b><h2 class="welcome-animation">Hello!</h2></b>
-            <b><h3>Thank you for using StreamPipes.</h3></b>
+            <b><h3>Thank you for using {{appConstants.APP_NAME}}.</h3></b>
         </div>
         <div><img src="assets/img/sp-pipeline-white-small.png"
                   style="margin-left:auto;margin-right:auto;display:block;">
         </div>
         <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column">
             <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column">
-                <b>StreamPipes is your self-service toolbox for real-time analytics.</b>
-                <p>If you are using StreamPipes for the first time, we recommend taking the interactive tour!</p>
+                <b>{{appConstants.APP_NAME}} is your self-service toolbox for real-time analytics.</b>
+                <p>If you are using {{appConstants.APP_NAME}} for the first time, we recommend taking the interactive tour!</p>
             </div>
             <button mat-button mat-raised-button color="primary" (click)="startCreatePipelineTour()">Start Tour</button>
         </div>
