--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -49,7 +49,7 @@
                         <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Show</th>
                         <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                             <div fxLayout="row">
-                                <button mat-button mat-icon-button color="primary"
+                                <button mat-button mat-icon-button color="accent"
                                         (click)="showDashboard(element)">
                                     <i class="material-icons">visibility</i>
                                 </button>
@@ -61,7 +61,7 @@
                         <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Delete</th>
                         <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                             <div fxLayout="row">
-                                <button mat-button mat-icon-button color="primary"
+                                <button mat-button mat-icon-button color="accent"
                                         (click)="openDeleteDashboardDialog(element)">
                                     <i class="material-icons">delete</i>
                                 </button>
