--- a/ui/src/app/login/components/setup/setup.component.html
+++ b/ui/src/app/login/components/setup/setup.component.html
@@ -52,10 +52,10 @@
                                 <div fxFlex="80" style="width:50%">
                                     <h4>{{msg.notifications[0].title}}</h4></div>
                                 <div fxFlex="20" style="width:50%">
-                                    <mat-icon class="md-accent" color="primary" style="width: 36px; height: 36px"
+                                    <mat-icon class="md-accent" color="accent" style="width: 36px; height: 36px"
                                               *ngIf="msg.success">done
                                     </mat-icon>
-                                    <mat-icon class="md-accent" color="primary" style="width: 36px; height: 36px"
+                                    <mat-icon class="md-accent" color="accent" style="width: 36px; height: 36px"
                                               *ngIf="!(msg.success)">error
                                     </mat-icon>
                                 </div>
