--- a/ui/src/scss/sp/sp-theme.scss
+++ b/ui/src/scss/sp/sp-theme.scss
@@ -161,6 +161,7 @@ $accent: map-get($custom-theme-light, accent);
         --color-bg-1: #282828;
         --color-bg-2: #404040;
         --color-bg-3: #424242;
+        --color-bg-4: #5f5f5f;
         --color-bg-dialog: rgb(66, 66, 66);
         --color-shadow: #c4c4c4;
         --color-pe: #404040;
@@ -193,6 +194,7 @@ $accent: map-get($custom-theme-light, accent);
         --color-bg-1: #FAFAFA;
         --color-bg-2: #f1f1f1;
         --color-bg-3: rgb(224, 224, 224);
+        --color-bg-4: rgb(212, 212, 212);
         --color-bg-dialog: #FFFFFF;
         --color-shadow: #555;
         --color-pe: #FFFFFF;
