--- a/ui/src/app/data-explorer/components/time-selector/timeRangeSelector.component.scss
+++ b/ui/src/app/data-explorer/components/time-selector/timeRangeSelector.component.scss
@@ -42,13 +42,13 @@
 }
 
 .time-range-wrapper {
-    border: 1px solid $sp-color-accent;
-    background: $sp-color-accent;
+    border: 1px solid var(--color-accent);
+    background: var(--color-accent);
 }
 
 .time-wrapper {
-    border: 1px solid $sp-color-accent;
-    background: white;
+    border: 1px solid var(--color-accent);
+    background: var(--color-bg-0);
 }
 
 .mr--15 {
