--- a/ui/src/app/data-explorer/components/widgets/utils/no-data/no-data-in-date-range.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/no-data/no-data-in-date-range.component.html
@@ -22,7 +22,7 @@
         <!-- TODO Icon -->
     </div>
     <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
-        <h3>Found no data in selected time range ({{viewDateRange.startDate | date:'MM/dd/yyyy HH:mm'}} - {{viewDateRange.endDate | date:'MM/dd/yyyy HH:mm'}})</h3>
+        <h3 class="default-text">Found no data in selected time range ({{viewDateRange.startDate | date:'MM/dd/yyyy HH:mm'}} - {{viewDateRange.endDate | date:'MM/dd/yyyy HH:mm'}})</h3>
 
     </div>
 </div>
