--- a/ui/src/app/data-explorer/dialogs/add-widget/data-explorer-add-visualization-dialog.component.css
+++ b/ui/src/app/data-explorer/dialogs/add-widget/data-explorer-add-visualization-dialog.component.css
@@ -22,8 +22,8 @@
 }
 
 mat-toolbar {
-    background: #39b54a;
-    color:white;
+    background: var(--color-primary);
+    color:var(--color-bg-0);
 }
 
 mat-dialog-content {
@@ -62,10 +62,10 @@ mat-dialog-content {
 }
 
 .list-item:hover {
-    background: #E0E0E0;
+    background: var(--color-bg-1);
     cursor: pointer;
 }
 
 .list-item {
-    border-bottom: 1px solid #BDBDBD;
+    border-bottom: 1px solid var(--color-bg-0);
 }
