--- a/ui/src/app/data-explorer/dialogs/add-widget/data-explorer-add-visualization-dialog.component.html
+++ b/ui/src/app/data-explorer/dialogs/add-widget/data-explorer-add-visualization-dialog.component.html
@@ -68,7 +68,7 @@
         && !(data)">
             Back
         </button>
-        <button mat-button mat-raised-button color="primary" (click)="next()">
+        <button mat-button mat-raised-button color="accent" (click)="next()">
             <span *ngIf="!data && 'configure-widget' === page">Create</span>
             <span *ngIf="data && 'configure-widget' === page">Save</span>
             <span *ngIf="data == null && !('configure-widget' === page)">Next</span>
