[STREAMPIPES-395] Improve layout of data explorer module

--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -18,7 +18,7 @@
 
 <div class="widget-content">
     <div class="widget-inner-options" style="margin-left: 0;margin-right: 0;margin-top: 0;">
-        <div fxFlex="100" layout="row" fxLayoutAlign="start center" style="margin-left: 0px;margin-right: 0px;">
+        <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" style="margin-left: 0px;margin-right: 0px;">
             <mat-form-field appearance="standard" class="form-field-margin form-field-size-smaller" style="margin-right: 5px;">
                 <mat-label><mat-icon>search</mat-icon><span>&nbsp;Search</span></mat-label>
                 <input matInput (input)="onFilterChange($event.target.value)" >
