--- a/ui/src/app/core/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core/components/toolbar/toolbar.component.html
@@ -17,11 +17,11 @@
   -->
 
 <mat-toolbar class="md-primary md-hue-2 top-nav toolbar-bg">
-    <div class="md-toolbar-tools" style="height:50px;max-height:50px;width:100%;">
+    <div class="md-toolbar-tools sp-toolbar">
         <div fxFlex="60" fxLayout fxLayoutAlign="start center">
-            <div class="md-toolbar-tools" style="height:50px;max-height:50px;" fxFlex fxLayout="row" fxLayoutAlign="start center">
+            <div class="md-toolbar-tools" style="height:40px;max-height:40px;" fxFlex fxLayout="row" fxLayoutAlign="start center">
                 <div style="padding:5px;border-radius:0px;margin-right:15px;position:relative;left:20px;">
-                    <img alt="icon" src="../../../../assets/img/sp/logo-navigation.png" style="height:35px;">
+                    <img alt="icon" src="../../../../assets/img/sp/logo-navigation.png" style="height:30px;">
                 </div>
                 <div style="padding: 5px 5px;font-size:15px;margin-left:10px;">
                     <h4 style="margin-top:16px;font-size:12pt;font-weight:bold;">{{activePageName}}</h4>
