--- a/ui/src/app/core/components/iconbar/iconbar.component.html
+++ b/ui/src/app/core/components/iconbar/iconbar.component.html
@@ -19,7 +19,7 @@
 <div style="padding-top:0px;">
     <div [ngClass]="item.link === activePage ? 'sp-navbar-item-selected': 'sp-navbar-item'"
          *ngFor="let item of menu" style="min-width:0px;padding:0px;padding-top:5px;padding-bottom:5px;">
-        <button mat-button mat-icon-button class="button-margin-iconbar" (click)="go(item.link)"
+        <button mat-button mat-icon-button class="button-margin-iconbar iconbar-size" (click)="go(item.link)"
                 matTooltip="{{item.title}}" matTooltipPosition="right">
             <mat-icon [ngClass]="item.link === activePage ? 'sp-navbar-icon-selected' : 'sp-navbar-icon'">
                 {{item.icon}}
@@ -28,7 +28,7 @@
     </div>
     <div [ngClass]="'notifications' === activePage ? 'sp-navbar-item-selected' : 'sp-navbar-item'"
          style="padding-top:5px;padding-bottom:5px;">
-        <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar"
+        <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size"
                 (click)="go('notifications')"
                 matTooltip="Notifications" matTooltipPosition="right">
             <mat-icon [matBadge]="NotificationCountService.unreadNotificationCount" [matBadgeHidden]="NotificationCountService.unreadNotificationCount == 0" [ngClass]="'notifications' === activePage ?'sp-navbar-icon-selected' : 'sp-navbar-icon'">chat
@@ -38,7 +38,7 @@
     <mat-divider style="border-top-color:white;"></mat-divider>
     <div [ngClass]="item.link === activePage ? 'sp-navbar-item-selected' : 'sp-navbar-item'"
          *ngFor="let item of admin" style="padding-top:5px;padding-bottom:5px;">
-        <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar" (click)="go(item.link)"
+        <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size" (click)="go(item.link)"
                 matTooltip="{{item.title}}">
             <mat-icon
                     [ngClass]="item.link === activePage ?'sp-navbar-icon-selected' : 'sp-navbar-icon'">{{item.icon}}</mat-icon>
