--- a/ui/src/app/core/components/streampipes/streampipes.component.html
+++ b/ui/src/app/core/components/streampipes/streampipes.component.html
@@ -17,11 +17,11 @@
   -->
 
 <div [ngClass]="authStatusService.darkMode ? 'dark-mode base-style' : 'light-mode base-style'">
-    <div style="height: 50px;">
+    <div class="sp-toolbar-outer">
         <toolbar></toolbar>
     </div>
-    <div style="display: flex;flex-direction:row; height: calc(100vh - 50px);">
-        <div style="width:40px;color:white;" class="iconbar">
+    <div style="display: flex;flex-direction:row; height: calc(100vh - 40px);">
+        <div style="width:35px;color:white;" class="iconbar">
             <iconbar></iconbar>
         </div>
         <div style="width: 100%; height: 100%; overflow-y: auto;" class="base">
