--- a/ui/src/app/core/components/iconbar/iconbar.component.html
+++ b/ui/src/app/core/components/iconbar/iconbar.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div style="padding-top:0px;">
+<div style="padding-top:0px;" fxFlex="100" fxLayout="column">
     <div [ngClass]="item.link === activePage ? 'sp-navbar-item-selected': 'sp-navbar-item'"
          *ngFor="let item of menu" style="min-width:0px;padding:0px;padding-top:5px;padding-bottom:5px;">
         <button mat-button mat-icon-button class="button-margin-iconbar iconbar-size" (click)="go(item.link)"
@@ -31,17 +31,23 @@
         <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size"
                 (click)="go('notifications')"
                 matTooltip="Notifications" matTooltipPosition="right">
-            <mat-icon [matBadge]="NotificationCountService.unreadNotificationCount" [matBadgeHidden]="NotificationCountService.unreadNotificationCount == 0" [ngClass]="'notifications' === activePage ?'sp-navbar-icon-selected' : 'sp-navbar-icon'">chat
+            <mat-icon [matBadge]="NotificationCountService.unreadNotificationCount"
+                      [matBadgeHidden]="NotificationCountService.unreadNotificationCount == 0"
+                      [ngClass]="'notifications' === activePage ?'sp-navbar-icon-selected' : 'sp-navbar-icon'">chat
             </mat-icon>
         </button>
     </div>
-    <mat-divider style="border-top-color:white;"></mat-divider>
+    <mat-divider style="border-top-color:var(--color-navigation-text);"></mat-divider>
     <div [ngClass]="item.link === activePage ? 'sp-navbar-item-selected' : 'sp-navbar-item'"
          *ngFor="let item of admin" style="padding-top:5px;padding-bottom:5px;">
-        <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size" (click)="go(item.link)"
+        <button mat-button mat-icon-button class="md-icon-button button-margin-iconbar iconbar-size"
+                (click)="go(item.link)"
                 matTooltip="{{item.title}}">
             <mat-icon
                     [ngClass]="item.link === activePage ?'sp-navbar-icon-selected' : 'sp-navbar-icon'">{{item.icon}}</mat-icon>
         </button>
+    </div>
+    <div fxFlex="100" fxLayoutAlign="center end">
+        <span class="version-info-text">v{{versionInfo.backendVersion}}</span>
     </div>
 </div>
