--- a/ui/src/app/core/components/iconbar/iconbar.component.scss
+++ b/ui/src/app/core/components/iconbar/iconbar.component.scss
@@ -19,3 +19,14 @@
 .iconbar-size {
   width: 35px;
 }
+
+.version-info-text {
+  position: relative;
+  bottom: 10px;
+  color: var(--color-navigation-text);
+  font-size: small;
+  display: block;
+  transform: rotate(-90deg) translate(-100%);
+  margin-top: -50%;
+  white-space: nowrap;
+}
