--- a/ui/src/app/info/about/about.component.html
+++ b/ui/src/app/info/about/about.component.html
@@ -56,13 +56,11 @@
                     <li>
                         <div fxLayout="row fill" fxFlex="100">
                             <div fxFlex="5" fxLayoutAlign="start center">
-                                <img height="24" width="24"
-                                     src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg"/>
+                                <mat-icon>code</mat-icon>
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5> Find the source
-                                    code at <a
-                                            href="https://github.com/apache/incubator-streampipes">https://github.com/apache/incubator-streampipes</a>
+                                    code at <a href="https://github.com/apache/incubator-streampipes">https://github.com/apache/incubator-streampipes</a>
                                 </h5>
                             </div>
                         </div>
@@ -70,8 +68,7 @@
                     <li>
                         <div fxLayout="row fill" fxFlex="100">
                             <div fxFlex="5" fxLayoutAlign="start center">
-                                <img height="24" width="24"
-                                     src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/docker.svg"/>
+                                <mat-icon>local_shipping</mat-icon>
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5> Find the docker
@@ -93,8 +90,7 @@
                     <li>
                         <div fxLayout="row fill" fxFlex="100">
                             <div fxFlex="5" fxLayoutAlign="start center">
-                                <img height="24" width="24"
-                                     src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg"/>
+                                <mat-icon>chat</mat-icon>
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5>Follow us on <a
@@ -118,8 +114,7 @@
                     <li>
                         <div fxLayout="row fill" fxFlex="100">
                             <div fxFlex="5" fxLayoutAlign="start center">
-                                <img height="24" width="24"
-                                     src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg"/>
+                                <mat-icon>star_rate</mat-icon>
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5>If you like
