--- a/ui/src/scss/sp/buttons.ng1.scss
+++ b/ui/src/scss/sp/buttons.ng1.scss
@@ -30,6 +30,7 @@
 
 .sp-navbar-item:hover {
   color: var(--color-navigation-selected);
+  background: var(--color-navigation-hover);
 }
 
 .sp-navbar-icon {
