--- a/ui/src/app/profile/components/general/general-profile-settings.component.scss
+++ b/ui/src/app/profile/components/general/general-profile-settings.component.scss
@@ -33,3 +33,13 @@
 .title-section {
   width: 300px;
 }
+
+.appearance-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+}
+
+.appearance-radio-button {
+  margin: 5px;
+}
