--- a/ui/src/app/core/components/toolbar/toolbar.component.scss
+++ b/ui/src/app/core/components/toolbar/toolbar.component.scss
@@ -44,3 +44,12 @@
   max-height:40px;
   width:100%;
 }
+
+.version-info-text {
+  color: var(--color-navigation-text);
+  font-size: small;
+  display: block;
+  margin-top: 3px;
+  margin-right: 15px;
+  white-space: nowrap;
+}
