--- a/ui/src/app/pipelines/dialog/delete-pipeline/delete-pipeline-dialog.component.html
+++ b/ui/src/app/pipelines/dialog/delete-pipeline/delete-pipeline-dialog.component.html
@@ -40,7 +40,7 @@
         </div>
         <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" *ngIf="isInProgress">
             <div fxLayout="row" fxLayoutAlign="space-around">
-                <mat-spinner [mode]="'indeterminate'"></mat-spinner>
+                <mat-spinner [mode]="'indeterminate'" color="accent"></mat-spinner>
             </div>
             <b><h4>{{currentStatus}}</h4></b>
         </div>
