[STREAMPIPES-395] Use correct accent color in light mode

--- a/ui/src/scss/_variables.scss
+++ b/ui/src/scss/_variables.scss
@@ -18,7 +18,7 @@
 
 $sp-color-primary:  rgb(57, 181, 74);
 $sp-color-primary-light: rgb(59, 205, 76);
-$sp-color-accent: #19319E;
+$sp-color-accent: #1b1464;
 $sp-color-accent-light-blue: rgb(59, 92, 149);
 $sp-color-accent-light: rgb(156, 156, 156);
 $sp-color-accent-light-transparent: rgba(156, 156, 156, 0.4);
