--- a/ui/src/app/data-explorer/components/grid/data-explorer-dashboard-grid.component.html
+++ b/ui/src/app/data-explorer/components/grid/data-explorer-dashboard-grid.component.html
@@ -27,10 +27,12 @@
                     [viewDateRange]="viewDateRange"
                     (updateCallback)="propagateItemUpdate($event)"
                     (deleteCallback)="propagateItemRemoval($event)"
+                    (configureWidgetCallback)="propagateWidgetSelection($event)"
                     [item]="item"
                     [widget]="item"
+                    [configuredWidget]="configuredWidgets.get(item.id)"
                     [editMode]="editMode"
-                    [gridsterItemComponent]="gridsterItemComponent"></sp-data-explorer-dashboard-widget>
+                    [gridsterItemComponent]="gridsterItemComponent" *ngIf="configuredWidgets.has(item.id)"></sp-data-explorer-dashboard-widget>
         </gridster-item>
     </ng-container>
 </gridster>
