--- a/ui/src/app/data-explorer/components/time-selector/timeRangeSelector.component.html
+++ b/ui/src/app/data-explorer/components/time-selector/timeRangeSelector.component.html
@@ -46,7 +46,7 @@
                    (dateTimeChange)="changeCustomDateRange()">
             <owl-date-time #dt2></owl-date-time>
         </mat-form-field>
-        <button mat-button class="button-icon icon-button-font-size mr--15" color="accent">
+        <button mat-button class="button-icon icon-button-font-size mr-15" color="accent">
             <mat-icon (click)="increaseTime()">navigate_next</mat-icon>
         </button>
     </div>
