--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.css
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.css
@@ -29,3 +29,21 @@
     flex-direction: column;
     flex: 1 1 100%;
 }
+
+.designer-panel-container {
+    width: 100%;
+    height: 100%;
+}
+
+.designer-panel {
+    width: 350px;
+    border: 1px solid var(--color-tab-border);
+}
+
+.designer-panel-title {
+    margin-left: 20px;
+}
+
+.designer-panel-header {
+    border-bottom:1px solid var(--color-tab-border);
+}
