--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -73,8 +73,6 @@
 }
 
 
-
-
 .w-100 {
   width: 100%;
 }
@@ -85,7 +83,7 @@
 
 .page-container-nav {
   line-height:24px;
-  border-bottom:1px solid var(--color-bg-2);
+  border-bottom:1px solid var(--color-tab-border);
 }
 
 .text-center {
