--- a/ui/src/scss/sp/sp-theme.scss
+++ b/ui/src/scss/sp/sp-theme.scss
@@ -138,79 +138,105 @@ $accent-dark: map-get($custom-theme-dark, accent);
 $accent: map-get($custom-theme-light, accent);
 
 
+.small .mat-tab-label {
+  height: 24px;
+  padding: 0 12px;
+  cursor: pointer;
+  box-sizing: border-box;
+  opacity: .6;
+  min-width: 80px;
+  text-align: center;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  position: relative;
+}
+
+.small .mat-tab-label-content {
+  text-transform: none;
+  font-size: 11pt;
+
+}
+
 .dark-mode {
-        @include angular-material-theme($custom-theme-dark);
+  @include angular-material-theme($custom-theme-dark);
 
-        .base-style {
-                color: rgba(255, 255, 255, 0.87);
-                background: #121212;
-        }
+  .base-style {
+    color: rgba(255, 255, 255, 0.87);
+    background: #121212;
+  }
 
-        .mat-toolbar.mat-primary {
-                color: #121212;
-        }
+  .mat-toolbar.mat-primary {
+    color: #121212;
+  }
 
-        .mat-tooltip.tooltip {
-                background-color: rgba(255, 255, 255, 0.87);
-                font-size: 12px;
-        }
+  .mat-tooltip.tooltip {
+    background-color: rgba(255, 255, 255, 0.87);
+    font-size: 12px;
+  }
 
-        --color-primary: #{mat-color($primary)};
-        --color-accent: #{mat-color($accent-dark)};
-        --color-bg-0: #121212;
-        --color-bg-1: #282828;
-        --color-bg-2: #404040;
-        --color-bg-3: #424242;
-        --color-bg-4: #5f5f5f;
-        --color-bg-dialog: rgb(66, 66, 66);
-        --color-shadow: #c4c4c4;
-        --color-pe: #404040;
-        --color-default-text: rgba(255, 255, 255, 0.87);
-        --color-warn: #b36161;
+  --color-primary: #{mat-color($primary)};
+  --color-accent: #{mat-color($accent-dark)};
+  --color-bg-0: #121212;
+  --color-bg-1: #282828;
+  --color-bg-2: #404040;
+  --color-bg-3: #424242;
+  --color-bg-4: #5f5f5f;
+  --color-bg-dialog: rgb(66, 66, 66);
+  --color-shadow: #c4c4c4;
+  --color-pe: #404040;
+  --color-default-text: rgba(255, 255, 255, 0.87);
+  --color-warn: #b36161;
 
-        --color-navigation-bg: #{mat-color($primary)};
-        --color-navigation-link-text: #121212;
-        --color-navigation-text: #121212;
-        --color-navigation-selected: #{mat-color($primary)};
-        --color-navigation-hover: #{mat-color($primary, 600)};
-        --color-navigation-bg-selected: #121212;
-        --color-navigation-divider: #{mat-color($primary)};
+  --color-tab-border : #cccccc;
 
-        --content-box-color: #404040;
-        --canvas-color: linear-gradient(90deg, rgba(50, 50, 50, 0.5) 10%, transparent 0%), linear-gradient(rgba(50, 50, 50, 0.5) 10%, transparent 0%);
+  --color-navigation-bg: #{mat-color($primary)};
+  --color-navigation-link-text: #121212;
+  --color-navigation-text: #121212;
+  --color-navigation-selected: #{mat-color($primary)};
+  --color-navigation-hover: #{mat-color($primary, 600)};
+  --color-navigation-bg-selected: #121212;
+  --color-navigation-divider: #{mat-color($primary)};
+
+  --content-box-color: #404040;
+  --canvas-color: linear-gradient(90deg, rgba(50, 50, 50, 0.5) 10%, transparent 0%), linear-gradient(rgba(50, 50, 50, 0.5) 10%, transparent 0%);
 
 }
 
 .light-mode {
-        @include angular-material-theme($custom-theme-light);
+  @include angular-material-theme($custom-theme-light);
 
-        .base-style {
-                color: #121212;
-                background: #FFFFFF;
-        }
+  .base-style {
+    color: #121212;
+    background: #FFFFFF;
+  }
 
-        --color-primary: #{mat-color($primary)};
-        --color-accent: #{mat-color($accent)};
-        --color-bg-0: #FFFFFF;
-        --color-bg-1: #FAFAFA;
-        --color-bg-2: #f1f1f1;
-        --color-bg-3: rgb(224, 224, 224);
-        --color-bg-4: rgb(212, 212, 212);
-        --color-bg-dialog: #FFFFFF;
-        --color-shadow: #555;
-        --color-pe: #FFFFFF;
-        --color-default-text: #121212;
-        --color-warn: #B71C1C;
 
-        --color-navigation-bg: #{mat-color($primary)};
-        --color-navigation-link-text: #FFFFFF;
-        --color-navigation-text: #FFFFFF;
-        --color-navigation-selected: #{mat-color($primary)};
-        --color-navigation-hover: #{mat-color($primary, 600)};
-        --color-navigation-bg-selected: #FFFFFF;
-        --color-navigation-divider: #{mat-color($primary)};
+  --color-primary: #{mat-color($primary)};
+  --color-accent: #{mat-color($accent)};
+  --color-bg-0: #FFFFFF;
+  --color-bg-1: #FAFAFA;
+  --color-bg-2: #f1f1f1;
+  --color-bg-3: rgb(224, 224, 224);
+  --color-bg-4: rgb(212, 212, 212);
+  --color-bg-dialog: #FFFFFF;
+  --color-shadow: #555;
+  --color-pe: #FFFFFF;
+  --color-default-text: #121212;
+  --color-warn: #B71C1C;
 
-        --content-box-color: rgb(156, 156, 156);
-        --canvas-color: linear-gradient(90deg, rgba(208, 208, 208, 0.5) 10%, transparent 0%), linear-gradient(rgba(208, 208, 208, 0.5) 10%, transparent 0%);
+  --color-tab-border : #cccccc;
+
+  --color-navigation-bg: #{mat-color($primary)};
+  --color-navigation-link-text: #FFFFFF;
+  --color-navigation-text: #FFFFFF;
+  --color-navigation-selected: #{mat-color($primary)};
+  --color-navigation-hover: #{mat-color($primary, 600)};
+  --color-navigation-bg-selected: #FFFFFF;
+  --color-navigation-divider: #{mat-color($primary)};
+
+  --content-box-color: rgb(156, 156, 156);
+  --canvas-color: linear-gradient(90deg, rgba(208, 208, 208, 0.5) 10%, transparent 0%), linear-gradient(rgba(208, 208, 208, 0.5) 10%, transparent 0%);
 
 }
