--- a/ui/src/scss/sp/widgets.scss
+++ b/ui/src/scss/sp/widgets.scss
@@ -23,7 +23,7 @@
 
 .widget-inner-options {
   background: var(--color-bg-1);
-  border-bottom: 1px solid var(--color-bg-2);
+  border-bottom: 1px solid var(--color-tab-border);
   padding: 5px;
   height: 40px;
 }
